src/test/ui/consts/const-match-check.matchck.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` not covered
=======
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/const-match-check.rs:4:22
   |
LL | const X: i32 = { let 0 = 0; 0 };
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                      ^ pattern `std::i32::MIN..=-1i32` not covered
=======
   |                      ^ patterns `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` not covered
=======
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/const-match-check.rs:8:23
   |
LL | static Y: i32 = { let 0 = 0; 0 };
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                       ^ pattern `std::i32::MIN..=-1i32` not covered
=======
   |                       ^ patterns `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` not covered
=======
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/const-match-check.rs:13:26
   |
LL |     const X: i32 = { let 0 = 0; 0 };
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                          ^ pattern `std::i32::MIN..=-1i32` not covered
=======
   |                          ^ patterns `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` not covered
=======
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/const-match-check.rs:19:26
   |
LL |     const X: i32 = { let 0 = 0; 0 };
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                          ^ pattern `std::i32::MIN..=-1i32` not covered
=======
   |                          ^ patterns `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0005`.
